<resources>
    <string name="app_name">Fortune Courier</string>
    <string name="url_domain_customer">http://server.ashoresystems.com/~sivs/customerapis/</string>
    <string name="url_domain_associate">http://server.ashoresystems.com/~sivs/associateapis/</string>
    <string name="url_customer_signup">signup</string>
    <string name="url_verfiy_signup_otp">verify_signup_otp</string>
    <string name="url_verfiy_forgot_password_otp">verify_forgot_password_otp</string>
    <string name="url_resend_otp">resend_otp</string>
    <string name="url_login">login</string>
    <string name="url_logout">logout</string>
    <string name="url_forgot_password">forgot_password</string>
    <string name="url_reset_password">reset_password</string>
    <string name="url_facebook_login">facebook_login</string>
    <string name="url_set_phone_no">set_phone_no</string>
    <string name="url_verify_facebook_otp">verify_facebook_otp</string>
    <string name="url_change_password">change_password</string>
    <string name="url_change_phone_no">change_phone_no</string>
    <string name="url_terms_n_privacy">terms_n_privacy</string>
    <string name="url_verify_phone_no_otp">verify_phone_no_otp</string>
    <string name="url_get_countries">get_countries</string>
    <string name="url_get_states">get_states</string>
    <string name="url_get_customer_details">get_customer_details</string>
    <string name="url_get_associate_details">get_associate_details</string>
    <string name="url_update_customer_profile">update_customer_profile</string>
    <string name="url_update_associate_profile">update_associate_profile</string>
    <string name="url_validate_address">validate_address</string>
    <string name="url_check_rates">check_rates</string>
    <string name="url_validate_postal_code">validate_postal_code</string>
    <string name="url_fetch_carriers">fetch_carriers</string>
    <string name="url_fetch_service_types">fetch_service_types</string>
    <string name="url_drop_off_type">drop_off_type</string>
    <string name="url_fetch_package_types">fetch_package_types</string>
    <string name="url_contact_us">contact_us</string>
    <string name="url_get_from_countries">get_from_countries</string>
    <string name="url_get_to_countries">get_to_countries</string>
    <string name="url_dashboard_content">dashboard_content</string>
    <string name="url_create_shipment">create_shipment</string>
    <string name="url_view_shipment_history">view_shipment_history</string>
    <string name="url_view_shipment_details">view_shipment_details</string>
    <string name="url_fetch_contianer_type">fetch_contianer_type</string>
    <string name="url_fetch_package_size">fetch_package_size</string>
    <string name="url_track_shipment">track_shipment</string>
    <string name="url_get_special_services">get_special_services</string>
    <string name="url_check_special_services">check_special_services</string>
    <string name="url_zipcode_lookup">zipcode_lookup</string>
    <string name="url_fetch_pickup_rate">fetch_pickup_rate</string>
    <string name="url_pay">pay</string>
    <string name="url_apply_coupon_code">apply_coupon_code</string>
    <string name="url_get_saved_cards">get_saved_cards</string>
    <string name="url_get_associate_commissions">get_associate_commissions</string>
    <string name="url_get_associate_monthly_commission">get_associate_monthly_commission</string>
    <string name="url_get_help_text">get_help_text</string>
    <string name="url_fetch_fedex_commodity_quantity_units">fetch_fedex_commodity_quantity_units</string>
    <string name="url_fetch_fedex_shipment_purpose">fetch_fedex_shipment_purpose</string>
    <string name="url_set_pin">set_pin</string>
    <string name="url_verify_pin">verify_pin</string>
    <string name="url_change_pin">change_pin</string>
    <string name="url_forgot_pin">forgot_pin</string>
    <string name="url_verify_reset_pin_otp">verify_reset_pin_otp</string>
    <string name="url_resend_pin_otp">resend_pin_otp</string>
    <string name="url_fetch_fedex_document_types">fetch_fedex_document_types</string>
    <string name="url_verify_card">verify_card</string>
    <string name="url_dashboard">dashboard</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_register_now">Register Now</string>
    <string name="lbl_existing_customer"> Existing Customer?<font fgcolor="red"> Login</font></string>
    <string name="lbl_associate_portal">Associate Portal</string>
    <string name="lbl_become_customer">Become Customer</string>
    <string name="lbl_check_rates">Check Rates</string>
    <string name="lbl_existing_associate"> Existing Associate?<font fgcolor="red"> Login</font></string>
    <string name="lbl_customer_portal">Customer Portal</string>
    <string name="lbl_become_associate">Become Associate</string>
    <string name="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard.</string>
    <string name="lbl_t_n_c">Terms &amp; Conditions</string>
    <string name="hint_first_name">First Name*</string>
    <string name="hint_last_name">Last Name*</string>
    <string name="hint_phone_number">Phone Number*</string>
    <string name="hint_old_phone_number">Old Phone Number*</string>
    <string name="hint_new_phone_number">New Phone Number*</string>
    <string name="hint_email_address">Email Address*</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="hint_email_phonenumber">Email / Mobile Number*</string>
    <string name="hint_track_number">Enter Track ID*</string>
    <string name="hint_business_name">Business Name*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_new_password">New Password*</string>
    <string name="hint_old_password">Old Password*</string>
    <string name="hint_confirm_password">Confirm Password*</string>
    <string name="btn_register">Register</string>
    <string name="lbl_terms_conditions">I agree to the <a href="...">Terms &amp; Conditions</a></string>
    <string name="btn_next">Next</string>
    <string name="btn_track_now">Track Now</string>
    <string name="btn_get_quick_quote">Get Quick Quote</string>
    <string name="btn_special_services">Special Services ( optional )</string>
    <string name="lbl_or_register">or Register with</string>
    <string name="lbl_or_login">or Login with</string>
    <string name="lbl_create_account">No account yet? Create one</string>
    <string name="lbl_remember_me">Remember Me</string>
    <string name="lbl_forgot_password">Forgot Your Password?</string>
    <string name="hint_addressline1">Address Line 1*</string>
    <string name="hint_addressline2">Address Line 2</string>
    <string name="lbl_country">Country*</string>
    <string name="hint_zip">Zip*</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City*</string>
    <string name="lbl_zip">Zip*</string>
    <string name="hint_contact_name">Contact Name*</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_ship_date">Ship Date*</string>
    <string name="lbl_ship_date">Ship Date</string>
    <string name="lbl_otp_verification">OTP Verification</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="hint_otp_code">OTP code*</string>
    <string name="btn_verify">Verify</string>
    <string name="lbl_back">Back</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="lbl_rates">Rates</string>
    <string name="lbl_delivery_dates_time">Delivery Dates/Time</string>
    <string name="lbl_describe_your_message">Describe your Message</string>
    <string name="lbl_enter_message">Enter Message*</string>
    <string name="lbl_add_screenshots">Add Screenshots:- </string>
    <string name="btn_send_message">Send Message</string>
    <string name="btn_proceed">Proceed</string>
    <string name="err_msg_internet">Internet Connection is not available.</string>
    <string name="err_msg_name">Enter at least 3 characters</string>
    <string name="err_msg_addressline1">Address Line 1 is mandatory</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_phonenumber">Enter Valid Mobile Number</string>
    <string name="err_msg_password">Enter between 7 and 10 alphanumeric characters</string>
    <string name="err_msg_confirm_password">Password Do not match</string>
    <string name="err_msg_terms_and_condition">Please tick on terms and conditions</string>
    <string name="err_msg_zip">Enter Valid Zip Code</string>
    <string name="err_msg_city">Enter City</string>
    <string name="err_msg_shipment_date">Enter Shipment Date</string>
    <string name="err_msg_weight">Enter Weight</string>
    <string name="err_msg_declared_value">Enter Value</string>
    <string name="err_msg_length">Enter Length</string>
    <string name="err_msg_width">Enter Width</string>
    <string name="err_msg_height">Enter Height</string>
    <string name="err_msg_girth">Enter Girth</string>
    <string name="err_msg_enter_message">Enter Message</string>
    <string name="err_msg_server">Error in server side</string>
    <string name="err_msg_select_country">Please select country</string>
    <string name="err_msg_select_state">Please select state</string>
    <string name="err_msg_package_info">Enter Package Information</string>
    <string name="msg_update_profile">Profile Updated Successfully.</string>
    <string name="msg_password_change">Password Changed Successfully.</string>
    <string name="msg_signup">Signup has been done successfully.</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_dashboard_customer">DashboardCustomerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="facebook_app_id">159085818168688</string>
    <string name="fb_login_protocol_scheme">fb159085818168688</string>
    <string name="nav_item_update_profile">Update Profile</string>
    <string name="lbl_select_country">Select Country</string>
    <string name="hint_select_country">Select Country*</string>
    <string name="lbl_select_state">Select State</string>
    <string name="hint_select_state">Select State*</string>
    <string name="lbl_select_city">Select City</string>
    <string name="lbl_from">From</string>
    <string name="lbl_header_create_shipment">Create Shipment</string>
</resources>