<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/header_layout_back"
            layout="@layout/header_back" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nav_item_update_profile"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_margin="@dimen/size_5"
            android:src="@drawable/ic_info"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_edit_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:visibility="gone" />

        <com.example.aspl.fortunecourier.utility.RoundedImageView
            android:id="@+id/img_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_profile" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginRight="@dimen/size_30"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_first_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:visibility="gone">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    app:ccpDialog_allowSearch="true"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_defaultLanguage="ENGLISH" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        android:inputType="phone"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/editText_business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_business_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addressline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_addressline1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_addressline1"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addressline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_addressline2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_addressline2"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:text="@string/hint_select_country" />

            <com.example.aspl.fortunecourier.customspinner.SearchableSpinner
                android:id="@+id/spinner_country"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:layout_marginBottom="@dimen/size_10"
                app:hintText="@string/lbl_select_country">

            </com.example.aspl.fortunecourier.customspinner.SearchableSpinner>

            <!--  <Spinner
                  android:id="@+id/spinner_country"
                  style="@style/Widget.AppCompat.Spinner.Underlined"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:prompt="@string/lbl_select_country"
                  android:spinnerMode="dialog" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_zip"
                    android:inputType="textCapCharacters"
                    android:maxLength="11" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:text="@string/hint_select_state" />

            <com.example.aspl.fortunecourier.customspinner.SearchableSpinner
                android:id="@+id/spinner_state"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:layout_marginBottom="@dimen/size_10"
                app:hintText="@string/lbl_select_state">
            </com.example.aspl.fortunecourier.customspinner.SearchableSpinner>

            <!--  <Spinner
                  android:id="@+id/spinner_state"
                  style="@style/Widget.AppCompat.Spinner.Underlined"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:prompt="@string/lbl_select_state"
                  android:spinnerMode="dialog" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_city"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_city"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/lbl_select_city"
                android:spinnerMode="dialog"
                android:textColorHint="@android:color/black"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:background="@drawable/drawable_btn"
                android:text="@string/btn_update_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_20" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>